Fix: Roadmap: No more clipping at iPad size
When the viewport width was around 768px,
the two columns in roadmap mode were
overlapping.

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -251,12 +251,12 @@ h4, h5 {
   position: absolute;
   top: 1ex;
   right: 0;
-  width: 320px;
+  width: 290px;
 }
 
 #storyList #mileposts {
   position: fixed;
-  width: 300px;
+  width: 270px;
   /*top: 100px;
   *//*right: 10%;*/
   
